<resources>
    <string name="app_name">PPpanda</string>
    <string name="phone_hint">手机号码</string>
    <string name="password_hint">密码</string>
    <string name="identify_hint">请输入验证码</string>
    <string name="zhucexieyi">用户注册协议</string>
    <string name="wangjimima">忘记密码?</string>
    <string name="zongze">
        1.1保宝网的所有权和运营权归深圳市永兴元科技有限公司所有。\n1.2用户在注册之前，应当仔细阅读本协议，并同意遵守本协议后方可成为注册用户。一旦注册成功，则用户与保宝网之间自动形成协议关系，用户应当受本协议的约束。用户在使用特殊的服务或产品时，应当同意接受相关协议后方能使用
    </string>

    <string name="identify_write_info">填写真实的身份信息，才可以享有更多的健康服务</string>
    <string name="identify_upload_info">您的照片仅用于审核，我们将为您严格保密</string>
    <string name="about_us_tellphone_title">客服电话</string>
    <string name="about_us_tellphone">028-85577447</string>
    <string name="about_us_service_email_title">客服部邮箱</string>
    <string name="about_us_service_email">service@pp-panda.com</string>
    <string name="about_us_marketing_email_title">销售部邮箱</string>
    <string name="about_us_marketing_email">marketing@pp-panda.com</string>
    <string name="about_us_web_title">官方网站</string>
    <string name="about_us_web">www.pp-panda.com</string>
    <string name="about_us_weichat_title">微信公众号</string>
    <string name="about_us_weichat">PP熊猫的健康生活</string>

    <string name="about_us_bottm_info">
        Ver 1.1.0\n成都早寻智能科技股份有限公司\nCopyright© Foresight All right reserved
    </string>

    <string name="user_should_know">
        1、请确认您在经过对方同意的情况下使用其身份证信息\n\n\n2、如果在未经过对方允许的情况使用其身份信息，您需对自己的行为承担相应的法律责任\n\n\n3、若PP熊猫运营公司承担了因您的行为导致的行政处罚或侵权损害赔偿责任等，PP熊猫运营公司有权向您追讨等额的赔偿\n\n\n4、您在点击“确定”按钮后视为已阅读并同意以上条款
    </string>


</resources>
