<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragment_background_color">

    <include layout="@layout/title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:orientation="vertical"
        android:background="#ffffff">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@mipmap/logo"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="每一个人的健康管家"
            android:textSize="16sp"
            android:textColor="#37A5FF"
            android:gravity="center"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/about_us_tellphone"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="44dp"
        android:layout_marginTop="15dp"
        android:background="#ffffff">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/tellphone"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:text="@string/about_us_tellphone_title"
            android:gravity="center_vertical"
            android:textColor="@color/about_us_title"
            android:textSize="@dimen/about_us"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:text="@string/about_us_tellphone"
            android:textColor="@color/about_us_value"
            android:textSize="@dimen/about_us"
            android:gravity="center_vertical"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/about_us_service"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="44dp"
        android:layout_marginTop="1dp"
        android:background="#ffffff">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/emai1"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:text="@string/about_us_service_email_title"
            android:gravity="center_vertical"
            android:textColor="@color/about_us_title"
            android:textSize="@dimen/about_us"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:text="@string/about_us_service_email"
            android:textColor="@color/about_us_value"
            android:textSize="@dimen/about_us"
            android:gravity="center_vertical"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/about_us_marketing"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="44dp"
        android:layout_marginTop="1dp"
        android:background="#ffffff">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/email2"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:text="@string/about_us_marketing_email_title"
            android:gravity="center_vertical"
            android:textColor="@color/about_us_title"
            android:textSize="@dimen/about_us"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:text="@string/about_us_marketing_email"
            android:textColor="@color/about_us_value"
            android:textSize="@dimen/about_us"
            android:gravity="center_vertical"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/about_us_web"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="44dp"
        android:layout_marginTop="1dp"
        android:background="#ffffff">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/web"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:text="@string/about_us_web_title"
            android:gravity="center_vertical"
            android:textColor="@color/about_us_title"
            android:textSize="@dimen/about_us"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:text="@string/about_us_web"
            android:textColor="@color/about_us_value"
            android:textSize="@dimen/about_us"
            android:gravity="center_vertical"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/about_us_weichat"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="44dp"
        android:layout_marginTop="1dp"
        android:background="#ffffff">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/weichat"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:text="@string/about_us_weichat_title"
            android:gravity="center_vertical"
            android:textColor="@color/about_us_title"
            android:textSize="@dimen/about_us"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:text="@string/about_us_weichat"
            android:textColor="@color/about_us_value"
            android:textSize="@dimen/about_us"
            android:gravity="center_vertical"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="55dp"
        android:text="@string/about_us_bottm_info"
        android:textColor="@color/about_us_value"
        android:textSize="@dimen/about_us"
        android:gravity="center|bottom"/>

</LinearLayout>